Fix asset editor modal high contrast, z-index

--- a/react-common/styles/controls/Button.less
+++ b/react-common/styles/controls/Button.less
@@ -180,13 +180,15 @@
  *                 High Contrast                    *
  ****************************************************/
 
-.high-contrast .common-button {
-    color: @highContrastTextColor !important;
-    background: @highContrastBackgroundColor !important;
-    border-color: @highContrastTextColor !important;
+.high-contrast, .hc {
+    .common-button {
+        color: @highContrastTextColor !important;
+        background: @highContrastBackgroundColor !important;
+        border-color: @highContrastTextColor !important;
 
-    &:hover, &:focus {
-        outline: @highContrastFocusOutline !important;
-        z-index: @highContrastFocusZIndex;
+        &:hover, &:focus {
+            outline: @highContrastFocusOutline !important;
+            z-index: @highContrastFocusZIndex;
+        }
     }
 }
